# ASTRA_TG

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
adapters/: __init__.py  base.py
astra_runtime/: __init__.py  chat_identity.py  contracts.py  legacy.py  manager.py  message_identity.py  router.py  status.py  switches.py
bot/: router.py
business/: __init__.py  adapter.py
config/: __init__.py  settings.py
core/: logging.py
docs/: architecture.md  runtime_migration_plan.md  ux_ui_master_spec.md
fullaccess/: __init__.py  adapter.py  auth.py  cache.py  cli.py  client.py  copy.py  formatter.py  models.py  send.py  sync.py
migrations/: README  env.py
models/: __init__.py  chat.py  common.py  digest.py  memory.py  reply_example.py  setting.py  style.py  task.py
schemas/: __init__.py  adapter.py
services/: autopilot.py  bot_commands.py  bot_owner.py  chat_memory_builder.py  command_parser.py  digest_builder.py  digest_engine.py  digest_formatter.py  digest_target.py  digest_window.py  error_handling.py  help_formatter.py  inline_navigation.py  memory_builder.py  memory_common.py  memory_formatter.py  message_ingest.py  message_normalizer.py  onboarding.py  operational_state.py  operational_tools.py  people_memory_builder.py  persona_adapter.py  persona_core.py  persona_formatter.py  persona_guardrails.py  persona_rules.py  reminder_delivery.py  reminder_extractor.py  reminder_formatter.py  reminder_models.py  reminder_service.py  reminder_window.py  render_cards.py  reply_classifier.py  reply_context_builder.py  (+28 more)
(+156 files in other folders)
